--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"/>
+<!--  Bootstrap link and jquery-->
+  <link rel="stylesheet" href="assets/styles/fontawesome-free/css/all.css">
+  <link rel="stylesheet" href="assets/styles/boot/bootstrap.css">
+  <link rel="stylesheet" href="assets/styles/boot/dataTables.bootstrap.css">
+  <link rel="stylesheet" href="assets/styles/boot/jquery.dataTables.css">
+  <link rel="stylesheet" href="assets/styles/boot/jquery-3.5.1.js">
+
 </head>
 <body class="mat-typography">
+<script>
+  // $(document).ready(function(){
+  //     alert("hello world");
+  // });
+</script>
   <app-root></app-root>
 </body>
 </html>
